/*
** EPITECH PROJECT, 2020
** B-CPP-501-LYN-5-1-rtype-lorris.hamdaoui [WSL: Ubuntu-20.04]
** File description:
** Network
*/

#pragma once

#include <ctime>
#include <iostream>
#include <string>
#include <boost/array.hpp>
#include <boost/asio.hpp>
#include <boost/bind.hpp>
#include <boost/shared_ptr.hpp>
#include <boost/make_shared.hpp>
#include <boost/thread/thread.hpp>
#include <boost/archive/text_iarchive.hpp>
#include <boost/archive/text_oarchive.hpp>

using boost::asio::ip::udp;

class Network {
    public:
        Network(int argc, char **argv);
        ~Network();
        typedef struct sample_t {
            std::string a;
            char b;
            int c;
            template<typename Ar> void serialize(Ar& ar, unsigned) { ar & a & b & c; }
        } sample;
        sample NetStruct;
        boost::asio::io_context _io;
        udp::socket _socket;
        int ms_speed;
        udp::resolver _resolver;
        udp::endpoint _server_endpoint;
    protected:
    private:
};